--- a/it/contatti.html
+++ b/it/contatti.html
@@ -99,41 +99,78 @@
 <!--#2-->
   <section class="mono">
     <div class="text-elements">
-      <h2>Un idea?</h2>
-      <p>Se sei interessato/a a diventare parte della nostra squadra, esplorare le opportunità di collaborazione o semplicemente condividere idee e feedback, sei nel posto giusto. Siamo sempre alla ricerca di talenti appassionati e motivati che condividono la nostra visione.</p>
-      <h3>Scrivici!</h3>
-      <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">
-        <p>Nome:</p>
-        <input class="fill" type="text" id="name" name="name" placeholder="Maria Rossi" required>
-  
-        <p>Email:</p>
-        <input class="fill" type="email" id="email" name="email" placeholder="mariarossi@esempio.it" required>
-
-        <p>Messagio:</p>
-        <textarea id="message" name="message" placeholder="Ciao associati!" required></textarea>
-
-        <input class="send" type="submit" value="Submit">
-      </form>
+      <h2>Hai qualcosa in più?</h2>
+      <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
+      <button class="showSectionButton" data-section-id="section1">Candidatura spontanea</button>
+      <button class="showSectionButton" data-section-id="section2">Architetto del paesaggio</button>
+      <button class="showSectionButton" data-section-id="section3">Lavoro 3</button>
     </div>
   </section>
 <!--#3-->
-  <section class="mono">
+  <section id="section1" class="mono toggleable-section hidden">
     <div class="text-elements">
-      <h2>Hai qualcosa in più?</h2>
-      <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
-      <h3>Lavora con noi!</h3>
-      <a href="404" class="classic-link">Architetto Senior</a>
-      <a href="404" class="classic-link">Architetto Junior</a>
-      <a href="404" class="classic-link">Ufficio DL – Computista</a>
-      <a href="404" class="classic-link">Profilo tecnico</a>
-      <a href="404" class="classic-link">Profilo amministrativo</a>
+      <h3>Candidatura spontanea</h3>
+      <h1>Responsabilità</h1>
+      <p>PA+N Associati accoglie con favore candidature spontanee da individui determinati e qualificati che desiderano contribuire al nostro impegno nell'architettura e la progettazione. Se ritenete di possedere le competenze e l'entusiasmo necessari per unirvi a noi in questa missione, vi invitiamo cortesemente a inviare la vostra candidatura. Siamo costantemente alla ricerca di professionisti motivati, pronti a condividere la nostra visione e a contribuire al successo dell'azienda con impegno e dedizione.</p>
+
+      <h1>Scrivici!</h1>
+      <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">
+        <p>Nome:</p>
+        <input class="fill" type="text" id="name" name="name" placeholder="Maria Rossi" required>
+        <p>Email:</p>
+        <input class="fill" type="email" id="email" name="email" placeholder="mariarossi@esempio.it" required>
+        <p>Messagio:</p>
+        <textarea id="message" name="message" placeholder="Ciao associati!" required></textarea>
+        <label class="file-label" for="document">Carica un curriculum</label>
+        <!-- Actual file input -->
+        <input type="file" id="document" name="document" accept=".pdf,.doc,.docx" required>
+        <input class="send" type="submit" value="Invia candidatura">
+      </form>
+    </div>
+  </section>
+<!--#4-->
+  <section id="section2" class="mono toggleable-section hidden">
+    <div class="text-elements">
+      <h3>Architetto del paesaggio</h3>
+      <h1>Responsabilità</h1>
+      <ul class="list">
+      <li>Partecipazione attiva a tutte le fasi del processo di progettazione.</li>
+      <li>Collaborare con il team nella progettazione e sviluppo di progetti paesaggistici e di riqualificazione urbana.</li>
+      <li>Contribuire con idee innovative e soluzioni sostenibili ai progetti in corso.</li>
+      <li>Buone capacità di ideazione del concept progettuale.</li>
+      <li>Elaborazione grafica e testuale per le diverse fasi di progetto.</li>
+      </ul>
+
+      <h1>Qualifiche</h1>
+      <ul class="list">
+      <li>Laurea in Architettura o Architettura del Paesaggio.</li>
+      <li>Esperienza professionale di almeno 1-3 anno nel settore.</li>
+      <li>Buona conoscenza dei principali software di progettazione e modellazione ( Autocad, suite Adobe, Office, eventuali software per la computistica, SketchUp, la conoscenza di modellazione in BIM sarà considerata un Plus).</li>
+      <li>Capacità di lavorare in team e di problem solving.</li>
+      <li>Buone capacità organizzative di intraprendenza.</li>
+      <li>Buone capacità comunicative e di presentazione.</li>
+      </ul>
+
+      <h1>Scrivici!</h1>
+      <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">
+        <p>Nome:</p>
+        <input class="fill" type="text" id="name" name="name" placeholder="Maria Rossi" required>
+        <p>Email:</p>
+        <input class="fill" type="email" id="email" name="email" placeholder="mariarossi@esempio.it" required>
+        <p>Messagio:</p>
+        <textarea id="message" name="message" placeholder="Ciao associati!" required></textarea>
+        <label class="file-label" for="document">Carica un curriculum</label>
+        <!-- Actual file input -->
+        <input type="file" id="document" name="document" accept=".pdf,.doc,.docx" required>
+        <input class="send" type="submit" value="Invia candidatura">
+      </form>
     </div>
   </section>
 </main>
 
 <footer>
-  <img class="svg-img" src="../elements/pan_associati_ext.svg">
-  <div class="module">
+  <img id="head-foot" class="svg-img" src="../elements/pan_associati_ext.svg">
+  <div class="footer">
     <div>
       <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a></p>
     </div>
@@ -145,6 +182,10 @@
     <div>
       <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
     </div>
+    <div>
+      <a href="https://www.accredia.it/"><img id="accred" class="svg-img" src="../elements/accredia.svg"></a>
+      <a href="https://www.sgs.com/it-it"><img id="accred" class="svg-img" src="../elements/sgs.svg"></a>
+    </div>
   </div>
   <div class="mega-separator"></div>
   <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
@@ -154,12 +195,11 @@
 // HEADER MENU NAV
 
 function toggleNav() {
-  document.getElementById("burger").classList.toggle("change");
-  document.getElementById("mySidenav").classList.toggle("open");
+document.getElementById("burger").classList.toggle("change");
+document.getElementById("mySidenav").classList.toggle("open");
 }
-
 function toggleSubNav() {
-  document.getElementById("subNavLinks").classList.toggle("show");
+ document.getElementById("subNavLinks").classList.toggle("show");
 }
 
 //DESKTOP MENU
@@ -175,69 +215,78 @@ if (menu.style.display === "block") {
 }
 
 // DARK MODE
+
 document.addEventListener('DOMContentLoaded', function() {
-  const darkModeToggle = document.getElementById('darkModeToggle');
-  
-  // Check if dark mode preference is stored in local storage
-  const isDarkMode = localStorage.getItem('darkMode') === 'true';
+const darkModeToggle = document.getElementById('darkModeToggle');
+// Check if dark mode preference is stored in local storage
+const isDarkMode = localStorage.getItem('darkMode') === 'true';
+// Set initial dark mode state based on local storage
+if (isDarkMode) {
+document.body.classList.add('dark-mode');
+darkModeToggle.checked = true;
+}
+// Toggle dark mode function
+function toggleDarkMode() {
+const isDarkMode = document.body.classList.contains('dark-mode');
+localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
+document.body.classList.toggle('dark-mode');
+}
+// Event listener for dark mode toggle switch
+darkModeToggle.addEventListener('change', toggleDarkMode);
+});
 
-  // Set initial dark mode state based on local storage
-  if (isDarkMode) {
-    document.body.classList.add('dark-mode');
-    darkModeToggle.checked = true;
-  }
+// SECTION SHOWER
 
-  // Toggle dark mode function
-  function toggleDarkMode() {
-    const isDarkMode = document.body.classList.contains('dark-mode');
-    localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
-    document.body.classList.toggle('dark-mode');
-  }
-
-  // Event listener for dark mode toggle switch
-  darkModeToggle.addEventListener('change', toggleDarkMode);
+const sections = document.querySelectorAll('.toggleable-section');
+const buttons = document.querySelectorAll('.showSectionButton');
+// Show section0 when the page loads
+document.getElementById('section0').classList.remove('hidden');
+// Add event listener to each button
+buttons.forEach(button => {
+button.addEventListener('click', function() {
+const sectionId = button.getAttribute('data-section-id');
+// Hide all toggleable sections
+sections.forEach(section => {
+section.classList.add('hidden');
+});
+// Show the corresponding section
+document.getElementById(sectionId).classList.remove('hidden');
+});
 });
 
 //SLIDESHOWS
 
 function initializeSlider(sliderId) {
-  let currentIndex = 0;
-  const slides = document.querySelectorAll(`#${sliderId} .slide`);
-  const totalSlides = slides.length;
-  let slideWidth = slides[0].clientWidth;
-  const slider = document.querySelector(`#${sliderId} .slides`);
-
-  function nextSlide() {
-    currentIndex = (currentIndex + 1) % totalSlides;
-    updateSlider();
-  }
-
-  function updateSlider() {
-    const offset = -currentIndex * slideWidth;
-    slider.style.transition = 'transform 2s ease';
-    slider.style.transform = `translateX(${offset}px)`;
-  }
-
-  setInterval(nextSlide, 6000); // Auto slide every 6 seconds
-
-  // Function to update slide widths based on window size
-  function updateSlideWidths() {
-    slideWidth = slides[0].clientWidth;
-    const offset = -currentIndex * slideWidth;
-    slider.style.transition = 'none';
-    slider.style.transform = `translateX(${offset}px)`;
-    setTimeout(() => {
-      slider.style.transition = '';
-    });
-  }
-
-  // Update slide widths when window is resized
-  window.addEventListener('resize', updateSlideWidths);
-
-  // Call the function once on page load to set initial slide widths
-  updateSlideWidths();
+let currentIndex = 0;
+const slides = document.querySelectorAll(`#${sliderId} .slide`);
+const totalSlides = slides.length;
+let slideWidth = slides[0].clientWidth;
+const slider = document.querySelector(`#${sliderId} .slides`);
+function nextSlide() {
+currentIndex = (currentIndex + 1) % totalSlides;
+updateSlider();
 }
-
+function updateSlider() {
+const offset = -currentIndex * slideWidth;
+slider.style.transition = 'transform 2s ease';
+slider.style.transform = `translateX(${offset}px)`;
+}
+setInterval(nextSlide, 6000); // Auto slide every 6 seconds
+// Function to update slide widths based on window size
+function updateSlideWidths() {
+slideWidth = slides[0].clientWidth;
+const offset = -currentIndex * slideWidth;
+slider.style.transition = 'none';
+slider.style.transform = `translateX(${offset}px)`;
+setTimeout(() => {
+slider.style.transition = '';
+});
+}
+// Update slide widths when window is resized
+window.addEventListener('resize', updateSlideWidths);
+// Call the function once on page load to set initial slide widths
+updateSlideWidths();
+}
 // Initialize sliders
 initializeSlider('slider1');
 initializeSlider('slider2');
