--- a/it/index.html
+++ b/it/index.html
@@ -85,7 +85,7 @@
 
 <main>
 <!--#0-->
-  <section>
+  <section class="accueil">
     <div class="slider" id="slider1">
       <div class="slides">
         <div class="slide">
@@ -247,17 +247,17 @@
     <div class="text-elements">
       <h2>News</h2>
       <div class="module">
-        <a class="hermit-link" href="404"><h3>Top Scape Paysage n° 53</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
-        <a class="hermit-link" href="404"><h3>Rivista Industria delle costruzioni n°493</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
-        <a class="hermit-link" href="404"><h3>Top Scape Paysage n° 46</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
+        <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Top Scape Paysage n° 53</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
+        <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Rivista Industria delle costruzioni n°493</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
+        <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Top Scape Paysage n° 46</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
       </div>
     </div>
   </section>
 </main>
 
 <footer>
-  <img class="svg-img" src="../elements/pan_associati_ext.svg">
-  <div class="module">
+  <img id="head-foot" class="svg-img" src="../elements/pan_associati_ext.svg">
+  <div class="footer">
     <div>
       <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a></p>
     </div>
@@ -269,6 +269,10 @@
     <div>
       <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
     </div>
+    <div>
+      <a href="https://www.accredia.it/"><img id="accred" class="svg-img" src="../elements/accredia.svg"></a>
+      <a href="https://www.sgs.com/it-it"><img id="accred" class="svg-img" src="../elements/sgs.svg"></a>
+    </div>
   </div>
   <div class="mega-separator"></div>
   <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
@@ -278,12 +282,11 @@
 // HEADER MENU NAV
 
 function toggleNav() {
-  document.getElementById("burger").classList.toggle("change");
-  document.getElementById("mySidenav").classList.toggle("open");
+document.getElementById("burger").classList.toggle("change");
+document.getElementById("mySidenav").classList.toggle("open");
 }
-
 function toggleSubNav() {
-  document.getElementById("subNavLinks").classList.toggle("show");
+ document.getElementById("subNavLinks").classList.toggle("show");
 }
 
 //DESKTOP MENU
@@ -299,70 +302,78 @@ if (menu.style.display === "block") {
 }
 
 // DARK MODE
+
 document.addEventListener('DOMContentLoaded', function() {
-  const darkModeToggles = document.querySelectorAll('.DarkModeButton input[type="checkbox"]');
-  
-  // Check if dark mode preference is stored in local storage
-  const isDarkMode = localStorage.getItem('darkMode') === 'true';
-
-  // Set initial dark mode state based on local storage
-  if (isDarkMode) {
-    document.body.classList.add('dark-mode');
-    darkModeToggles.forEach(toggle => toggle.checked = true);
-  }
-
-  // Toggle dark mode function
-  function toggleDarkMode() {
-    const isDarkMode = document.body.classList.contains('dark-mode');
-    localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
-    document.body.classList.toggle('dark-mode');
-  }
-
-  // Event listeners for dark mode toggle switches
-  darkModeToggles.forEach(toggle => toggle.addEventListener('change', toggleDarkMode));
+const darkModeToggle = document.getElementById('darkModeToggle');
+// Check if dark mode preference is stored in local storage
+const isDarkMode = localStorage.getItem('darkMode') === 'true';
+// Set initial dark mode state based on local storage
+if (isDarkMode) {
+document.body.classList.add('dark-mode');
+darkModeToggle.checked = true;
+}
+// Toggle dark mode function
+function toggleDarkMode() {
+const isDarkMode = document.body.classList.contains('dark-mode');
+localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
+document.body.classList.toggle('dark-mode');
+}
+// Event listener for dark mode toggle switch
+darkModeToggle.addEventListener('change', toggleDarkMode);
 });
 
+// SECTION SHOWER
+
+const sections = document.querySelectorAll('.toggleable-section');
+const buttons = document.querySelectorAll('.showSectionButton');
+// Show section0 when the page loads
+document.getElementById('section0').classList.remove('hidden');
+// Add event listener to each button
+buttons.forEach(button => {
+button.addEventListener('click', function() {
+const sectionId = button.getAttribute('data-section-id');
+// Hide all toggleable sections
+sections.forEach(section => {
+section.classList.add('hidden');
+});
+// Show the corresponding section
+document.getElementById(sectionId).classList.remove('hidden');
+});
+});
 
 //SLIDESHOWS
 
 function initializeSlider(sliderId) {
-  let currentIndex = 0;
-  const slides = document.querySelectorAll(`#${sliderId} .slide`);
-  const totalSlides = slides.length;
-  let slideWidth = slides[0].clientWidth;
-  const slider = document.querySelector(`#${sliderId} .slides`);
-
-  function nextSlide() {
-    currentIndex = (currentIndex + 1) % totalSlides;
-    updateSlider();
-  }
-
-  function updateSlider() {
-    const offset = -currentIndex * slideWidth;
-    slider.style.transition = 'transform 2s ease';
-    slider.style.transform = `translateX(${offset}px)`;
-  }
-
-  setInterval(nextSlide, 6000); // Auto slide every 6 seconds
-
-  // Function to update slide widths based on window size
-  function updateSlideWidths() {
-    slideWidth = slides[0].clientWidth;
-    const offset = -currentIndex * slideWidth;
-    slider.style.transition = 'none';
-    slider.style.transform = `translateX(${offset}px)`;
-    setTimeout(() => {
-      slider.style.transition = '';
-    });
-  }
-
-  // Update slide widths when window is resized
-  window.addEventListener('resize', updateSlideWidths);
-
-  // Call the function once on page load to set initial slide widths
-  updateSlideWidths();
+let currentIndex = 0;
+const slides = document.querySelectorAll(`#${sliderId} .slide`);
+const totalSlides = slides.length;
+let slideWidth = slides[0].clientWidth;
+const slider = document.querySelector(`#${sliderId} .slides`);
+function nextSlide() {
+currentIndex = (currentIndex + 1) % totalSlides;
+updateSlider();
 }
-
+function updateSlider() {
+const offset = -currentIndex * slideWidth;
+slider.style.transition = 'transform 2s ease';
+slider.style.transform = `translateX(${offset}px)`;
+}
+setInterval(nextSlide, 6000); // Auto slide every 6 seconds
+// Function to update slide widths based on window size
+function updateSlideWidths() {
+slideWidth = slides[0].clientWidth;
+const offset = -currentIndex * slideWidth;
+slider.style.transition = 'none';
+slider.style.transform = `translateX(${offset}px)`;
+setTimeout(() => {
+slider.style.transition = '';
+});
+}
+// Update slide widths when window is resized
+window.addEventListener('resize', updateSlideWidths);
+// Call the function once on page load to set initial slide widths
+updateSlideWidths();
+}
 // Initialize sliders
 initializeSlider('slider1');
 initializeSlider('slider2');
